Untested but made it compatible from Java 8